<resources>
    <string name="app_name">Golpo</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="display_name">Display Name</string>
    <string name="logout">Logout</string>
    <string name="all_user">All User</string>
    <string name="settings">Settings</string>
    <string name="sub_title">Find Your Mind</string>
    <string name="logo_description">This is the logo for this app</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login_your_account">Login Your Account</string>
    <string name="create_new_account">Create New Account</string>
    <string name="display_name_is_empty">Display name is empty</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="password_is_empty">Password must be between 5 to 8 character</string>
    <string name="login_failed_message">Can not login to your account. Please write your username and password correctly</string>
    <string name="no_internet_connection">Ooops! No WiFi/Mobile Networks Connected!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="xubayer_nil">Xubayer Nil</string>
    <string name="i_am_very_fine_how_are_you">I am very fine. How are you?</string>
    <string name="change_picture">Change Picture</string>
    <string name="change_status">Change Status</string>
    <string name="my_status">My Status</string>
    <string name="name">Name</string>
    <string name="no_internet_message">Your device is not connected to internet. Please Connect your Mobile Data or WiFi and try again.</string>
    <string name="user_name">User Name</string>
    <string name="current_user_status">Current User Status Current User Status Current User Status </string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="total_friends">Total Friends</string>
</resources>
